# pong-from-wish

./: .gitignore  Ball.cpp  Ball.hpp  CMakeLists.txt  CoolStuff.hpp  GameState.hpp  Main.cpp  Paddle.cpp  Paddle.hpp  README.md  _notes.txt
archived_01/: GLOBALS.hpp
archived_02/: Main.cpp
